core/tests/de/unisb/cs/depend/ccs_sem/junit/integrationtests/invalid/IntegerAsChannel.java
package de.unisb.cs.depend.ccs_sem.junit.integrationtests.invalid;


import de.unisb.cs.depend.ccs_sem.junit.FailingIntegrationTest;


public class IntegerAsChannel extends FailingIntegrationTest {

    @Override
    protected String getExpressionString() {
        return "1!2";
    }

    @Override
    protected int getExpectedParsingErrors() {
        return 1;
    }

    @Override
    protected boolean expectParsedProgram() {
        return false;
    }

}
